# tpcpp

pokemon/: CMakeLists.txt  card.cpp  energy_card.cpp  main.cpp  player.cpp  pokemon_card.cpp  trainer_card.cpp
pokemon/headers/: card.h  energy_card.h  player.h  pokemon_card.h  trainer_card.h
serietemp/: CMakeLists.txt  gau.cpp  knn.cpp  main.cpp  sin.cpp  stp.cpp  tsdata.cpp  tsgen.cpp
serietemp/headers/: gau.h  knn.h  sin.h  stp.h  tsdata.h  tsgen.h
